vault backup: 2025-08-03 14:09:03